[gd_scene load_steps=3 format=3 uid="uid://5h71fn6spim1"]

[ext_resource type="Theme" uid="uid://cybssocn771kw" path="res://themes/theme.tres" id="1_26127"]
[ext_resource type="Script" path="res://scenes/customize_race_menu.gd" id="1_k0r8w"]

[node name="CustomizeRaceMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0r8w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_26127")

[node name="RaceName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Alkari"
alignment = 1

[node name="VFlowContainer" type="VFlowContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Clear" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="Picks" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Picks"

[node name="PicksVal" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score"

[node name="ScoreVal" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0%"

[node name="Accept" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Accept"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_pressed"]
